--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitalets/google-translate-api": "^8.0.0",
     "axios": "^0.26.0",
     "cheerio": "^1.0.0-rc.10",
+    "cloudinary": "^1.28.1",
     "dotenv": "^16.0.0",
     "fancy-log": "^2.0.0",
     "mongoose": "^6.2.4",
