--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 TWITTER_APP_USER_TOKEN=
 MONGODB_URL=
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+S3_ENDPOINT=
+BUCKET_NAME=
+S3_SECRET=
+S3_ACCESS_KEY=
