--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodejs-file-downloader": "^4.9.3",
     "prettier": "^2.5.1",
     "puppeteer": "^13.4.1",
+    "snoowrap": "^1.23.0",
     "twitter-api-v2": "^1.11.0"
   }
 }
